--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             </form>
             <form action="calcular_sueldo" id="sueldo">
                 <h2>Calculadora de Sueldo</h2>
-                <label for="num1sueldo">Horas trabajadas: <input type="number" id="num1sueldo" required></label>
-                <label for="num2sueldo">Valor por hora: <input type="number" id="num2sueldo" required></label>
+                <label for="num1sueldo">Horas trab. : <input type="number" id="num1sueldo" required></label>
+                <label for="num2sueldo">Valor p/ hora: <input type="number" id="num2sueldo" required></label>
                 <button type="button" onclick="calcularsueldo()">Calcular Sueldo</button>
                 <p id="resultadosueldo"></p>
             </form>
